manual merge and gulp fixes with babel.config.json

--- a/babel.config.json
+++ b/babel.config.json
@@ -3,7 +3,9 @@
     "@babel/env",
     "@babel/preset-react"
   ],
+  "rootMode": "upward",
   "plugins": [
+    "@babel/plugin-syntax-jsx",
     "@babel/plugin-transform-runtime",
     [
       "@babel/plugin-proposal-class-properties",
